# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Go入门学习项目",
-        "title": "Learning-Go Swagger文档",
+        "title": "golang-in-action Swagger文档",
         "termsOfService": "https://github.com/ZongweiBai",
         "contact": {
             "name": "ZongweiBai",
@@ -53,9 +53,85 @@
                     }
                 }
             }
+        },
+        "/v1/oauth/token": {
+            "post": {
+                "description": "通过用户信息生成JWTtoken",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token相关接口"
+                ],
+                "summary": "生成JWTtoken",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Basic 用户令牌",
+                        "name": "Authorization",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/endpoint.JwtTokenMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/oauth/token/validate": {
+            "get": {
+                "description": "校验JWTtoken",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token相关接口"
+                ],
+                "summary": "校验JWTtoken",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Basic 用户令牌",
+                        "name": "Authorization",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/endpoint.JwtTokenMessage"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "endpoint.JwtTokenMessage": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                },
+                "userName": {
+                    "type": "string"
+                }
+            }
+        },
         "repository.User": {
             "type": "object",
             "properties": {
